# rat_tracer

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.txt
data/: data.yaml
data/labels/: Train.cache  Val.cache
data/labels/Train/: 2025-10-10_000050.txt  2025-10-10_000100.txt  2025-10-10_000692.txt  2025-10-10_000837.txt  2025-10-10_000867.txt  2025-10-10_000897.txt  2025-10-10_000937.txt  2025-10-10_000957.txt  2025-10-10_000977.txt  2025-10-10_000997.txt  2025-10-10_001017.txt  2025-10-10_001037.txt  2025-10-10_001097.txt  2025-10-10_001959.txt  2025-10-10_001999.txt  2025-10-10_002988.txt  2025-10-10_004097.txt  2025-10-10_004466.txt  2025-10-10_005118.txt  2025-10-10_006216.txt  2025-10-10_006350.txt  2025-10-10_006527.txt  2025-10-10_007153.txt  2025-10-10_007253.txt  2025-10-10_007581.txt  2025-10-10_007671.txt  2025-10-10_007711.txt  2025-10-10_007767.txt  2025-10-10_007795.txt  2025-10-10_007825.txt  2025-10-10_007925.txt  2025-10-10_007989.txt  2025-10-10_008019.txt  2025-10-10_008059.txt  2025-10-10_008079.txt  2025-10-10_008094.txt  2025-10-10_008109.txt  2025-10-10_008129.txt  2025-10-10_008173.txt  2025-10-10_009197.txt  (+589 more)
rat_tracer/: annotate_image.py  copy_static_label.py  count_frames.py  determinism.py  duplicates.py  extract_frame.py  extract_keyframes.py  find_moves.py  find_worst_annotations.py  info.py  lab_bounds.py  lib.py  list_worst_probabilities.py  mosaic.txt  paint.py  split.py  spread_static_label.py  t.py  to_coreml.py  track.py  track_to_frames.py  train.py  video_to_images.py  visualize.py
scripts/: replace_prefix.sh
(+414 files in other folders)
